# CubeGame

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  VERSION  build-config.json  build_android.sh  build_macos.sh  manifest.json  regenerate-project.sh  resources.json
Other/: RunPancake-macOS.sh  RunPancake-windows.bat  RunWithPreview-macOS.sh
Resources/: settings.json
Resources/shaders/: Base.hlsl  PostProcessing.hlsl  Shaders.json  Sky.hlsl
Scripts/: build_android.sh  build_android_release.sh  build_macos.sh  bump_version.sh  check_assets.sh  generate_release_notes.sh  install_release.sh  regenerate-project.sh  upload_quest_build.sh
Sources/: AR-TestLib.h  ARTApplication.cpp  ARTApplication.h  ARTCameraManager.cpp  ARTCameraManager.h  ARTHand.cpp  ARTHand.h  ARTPhysicsCube.cpp  ARTPhysicsCube.h  ARTTypes.cpp  ARTTypes.h  ARTWorld.cpp  ARTWorld.h  ARTestLib.h  Application.cpp  Application.hpp  CameraManager.cpp  CameraManager.hpp  CubeGameLib.hpp  HTTPServer.cpp  HTTPServer.hpp  Hand.cpp  Hand.hpp  HandTrackingInfo.cpp  HandTrackingInfo.hpp  LANServer.cpp  LANServer.hpp  Menu.cpp  Menu.hpp  MeshHelpers.hpp  ObjectManager.cpp  ObjectManager.hpp  Part.cpp  Part.hpp  PartsPicker.cpp  PartsPicker.hpp  PhysicsCube.cpp  PhysicsCube.hpp  PhysicsGroup.cpp  PhysicsGroup.hpp  (+12 more)
Sources/networking/: HTTPServer.cpp  HTTPServer.hpp  LANServer.cpp  LANServer.hpp  WebSocketServer.cpp  WebSocketServer.hpp
